# drone

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt
drone/: main.py
drone/gym_multirotor/: __init__.py
drone/gym_multirotor/envs/mujoco/: __init__.py  base_env.py  quadrotor_plus_hover.py  tiltrotor_plus_hover.py
drone/gym_multirotor/utils/: __init__.py  observation_utils.py  plotters.py  rand_sampling.py  thurst_motor.py
