[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
mujoco = "^3.2.6"
pyyaml = "^6.0.2"
stable-baselines3 = "^2.4.0"
shimmy = "^2.0.0"
gymnasium = "^1.0.0"
pandas = "^2.2.3"
imageio = "^2.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
