[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
mujoco = "^3.2.6"
pyyaml = "^6.0.2"
stable-baselines3 = "^2.4.0"
shimmy = "^2.0.0"
gymnasium = "^1.0.0"
pandas = "^2.2.3"
imageio = "^2.36.1"

[[tool.poetry.source]]
name = "rocm-pytorch"
url = "https://download.pytorch.org/whl/nightly/rocm6.2"
priority = "explicit"

[tool.poetry.group.rocm]
optional = true

[tool.poetry.group.rocm.dependencies]
pytorch-triton-rocm = { version = "3.1.0", source = "rocm-pytorch" }
torch = {version = "^2.6.0.dev20241122+rocm6.2", source = "rocm-pytorch"}
torchvision = {version = "^0.20.0.dev20241206+rocm6.2", source = "rocm-pytorch"}
torchaudio = {version = "^2.5.0.dev20241206+rocm6.2", source = "rocm-pytorch"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
